adjusted sizing of h1, h2, images and form fields to prevent overflow and resolve responsive sizing issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@
 
 /*** Global in addition to reset.css ***/
 body {
+    /* padding: auto; */
     font-family: var(--ff-primary);
     font-weight: 300;
     font-size: 1.3125rem;
@@ -31,11 +32,11 @@ h2 {
 }
 
 h1 {
-    font-size: 5rem;
+    font-size: 3.3rem;
 }
 
 h2{
-    font-size: 3.5rem;
+    font-size: 2.8rem;
 }
 
 img {
@@ -155,9 +156,9 @@ input[type=text],
 textarea,
 label,
 input[type=submit] {
-    margin: auto 10vw;
+    margin: 0auto;
     padding: 2vw;
-    width: 60vw;
+    width: 80vw;
 }
 
 input[type=text],
